# kirie

./: .gitignore  Cargo.toml  README.md  cliff.toml  release-plz.toml
.github/actions/release-setup/: action.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/kirie/: Cargo.toml  build.rs
crates/kirie-bake/src/: lib.rs
crates/kirie-formats/src/: pkg.rs
crates/kirie-ipc/src/: command.rs
crates/kirie-launcher/: Cargo.toml
crates/kirie-launcher/src/: lib.rs  main.rs
crates/kirie-platform/examples/: layer_clear.rs
crates/kirie-platform/src/: backend.rs  lib.rs  output.rs  platform.rs  pointer.rs  renderer.rs  x11.rs
crates/kirie-platform/tests/: stack.rs
crates/kirie-render/: Cargo.toml
crates/kirie-render/src/: lib.rs
crates/kirie-render/src/scene/: bloom.rs  bundle.rs  extras.rs  load.rs  mod.rs  model.rs  plan.rs  renderer.rs  scripting.rs
crates/kirie-render/tests/: gpu_readback.rs  scene_corpus.rs
crates/kirie-scene/src/: object.rs  resolve.rs  scene.rs
crates/kirie-script/src/: world.rs
crates/kirie-script/src/js/: host.js
crates/kirie-shader/: Cargo.toml
crates/kirie-shader/src/: translate.rs
crates/kirie-video/: Cargo.toml
crates/kirie-video/src/: decode.rs  hw.rs  lib.rs
crates/kirie-web/: Cargo.toml  build.rs
crates/kirie-web/src/: hosted.rs  lib.rs  renderer.rs  viewhost.rs
crates/kirie-web/src/cef/: backend.rs
crates/kirie-web/src/webview/: backend.rs
crates/kirie/src/: lib.rs
crates/kirie/src/compat/: ipc_app.rs  mod.rs  run.rs  screenshot.rs
crates/kirie/tests/: corpus_render.rs
