[package]
name = "kirie-video"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Statically link ffmpeg by building it from source (ffmpeg-sys-next `build` =>
# --enable-static --disable-shared). Removes the version-specific libav*/libsw*
# sonames from the binary so it runs across distros. Needs a C toolchain + nasm
# at build time. Enabled via kirie's `portable` feature; off by default (dynamic
# link, fast dev/CI builds).
static-ffmpeg = ["ffmpeg-next/build"]
# VAAPI hardware video decode (SPEC T11): attach a VAAPI hw device at decoder
# open and download decoded surfaces to system memory for the existing RGBA
# conversion path. Degrades to CPU decode (info log) when no render node/
# driver/codec support exists, so behavior without a VAAPI stack is unchanged.
# Holds the crate's only unsafe code, isolated in src/hw.rs (module-level
# allow with SAFETY comments; the crate stays deny(unsafe_code)). Off by
# default. True zero-copy dma-buf → wgpu import is follow-up work.
vaapi = []

[dependencies]
kirie-platform = { path = "../kirie-platform" }
ffmpeg-next = { workspace = true }
crossbeam-channel = { workspace = true }
cpal = { workspace = true }
ringbuf = { workspace = true }
triple_buffer = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[lints]
workspace = true
