[package]
name = "kirie-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# Default build compiles NEITHER CEF nor a webview: `cargo build/test
# --workspace` (no features) must stay green on machines without libcef or
# webkit2gtk. The heavy browser backends are strictly opt-in.
default = []
# Chromium Embedded Framework off-screen-rendering backend. `cef` and
# `cef-dll-sys` are HEAVY (download + cmake-build of libcef); gated so the
# default build never touches them.
cef = ["dep:cef", "dep:cef-dll-sys", "dep:memmap2", "dep:tracing-subscriber", "dep:libc", "host"]
# Out-of-process web host CLIENT: no browser deps at all — spawns the
# `kirie-webhost` binary and reads its shared-memory frames.
host = []
# wry + system webkit2gtk-4.1 native-surface backend, presented by the
# out-of-process `kirie-webviewhost` binary: webkit has no off-screen path
# (upstream won't-fix, see src/webview/mod.rs), so instead of compositing
# frames the host puts a gtk-layer-shell window straight on the compositor's
# background layer and lets webkit render into it natively. `wry` links
# `webkit2gtk-4.1`/`libsoup-3.0` via pkg-config at COMPILE time, so this
# feature only builds on a box with those -dev packages; gated so the default
# build never needs them.
webview = ["dep:wry", "dep:raw-window-handle", "dep:gtk", "dep:gtk-layer-shell", "dep:tracing-subscriber"]
# Out-of-process webview host CLIENT: no browser/gtk deps at all — spawns the
# `kirie-webviewhost` binary (which owns webkit + the layer surface) and
# drives it over stdin. The engine layer stays black behind the host's own
# background-layer window; `latest_frame()` is always `None`.
webview-client = []

[dependencies]
memmap2 = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
kirie-bake = { path = "../kirie-bake" }
kirie-platform = { path = "../kirie-platform" }
thiserror = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
arc-swap = { workspace = true }

# Heavy, optional, feature-gated. `default-features = false` drops the crate's
# `sandbox` + `build-util` defaults (neither is needed for OSR) while keeping
# the download + cmake link path (bootstrap notes). The workspace pins the same
# 149 line (`cef = "149"`); it is declared directly here because a
# `{ workspace = true }` ref cannot turn off the workspace entry's default
# features, and the root manifest must not be edited.
cef = { version = "149", default-features = false, optional = true }
cef-dll-sys = { workspace = true, optional = true }

# Heavy, optional, feature-gated (webview backend). `wry` pulls webkit2gtk-sys,
# which needs the system webkit2gtk-4.1 dev package at build time. `gtk` +
# `gtk-layer-shell` are the kirie-webviewhost window stack (background layer).
wry = { workspace = true, optional = true }
raw-window-handle = { workspace = true, optional = true }
gtk = { workspace = true, optional = true }
gtk-layer-shell = { workspace = true, optional = true }

[[bin]]
name = "kirie-cef-helper"
path = "src/bin/kirie-cef-helper.rs"
# The subprocess entrypoint links libcef, so it only exists in the `cef` build.
required-features = ["cef"]

[dev-dependencies]
# PNG encoding for the CEF OSR smoke test (tests/osr_smoke.rs, cef-only).
image = { workspace = true }

[[bin]]
name = "kirie-webhost"
path = "src/bin/kirie-webhost.rs"
required-features = ["cef"]

[[bin]]
name = "kirie-webviewhost"
path = "src/bin/kirie-webviewhost.rs"
# Links gtk + webkit2gtk (via wry); only exists in the `webview` build.
required-features = ["webview"]
